<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:rowOrderPreserved="false"
                android:visibility="visible" android:showDividers="middle|beginning|end">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome"
            android:id="@+id/welcomeText" android:clickable="false" android:gravity="center" android:layout_marginTop="35dp"/>
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/my_challenges"
            android:id="@+id/myChallenges" android:layout_below="@+id/welcomeText" android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:onClick="myChallengeButton"/>
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/new_challenge"
            android:id="@+id/newChallenge" android:layout_centerHorizontal="true" android:layout_below="@+id/myChallenges"
            android:layout_marginTop="75dp"
            android:onClick="newChallenge"/>
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:id="@+id/quit" android:layout_centerHorizontal="true" android:layout_below="@+id/newChallenge"
            android:layout_marginTop="75dp"
            android:onClick=""/>
</RelativeLayout>

